# OOP-Project-2

./: AddImageToSession.cpp  AddImageToSession.h  AddTransformationToImageInSessionCommand.cpp  AddTransformationToImageInSessionCommand.h  ApplicationController.cpp  ApplicationController.h  ApplyGrayscale.cpp  ApplyGrayscale.h  ApplyMonochrome.cpp  ApplyMonochrome.h  ApplyNegative.cpp  ApplyNegative.h  ApplyRotation.cpp  ApplyRotation.h  CMakeLists.txt  MakeCollageCommand.cpp  MakeCollageCommand.h  RasterImage.cpp  RasterImage.h  RasterImageBase.cpp  RasterImageBase.h  RasterImageCL.cpp  RasterImageRW.cpp  RasterImageRW.h  Session.cpp  Session.h  SessionCommandBase.h  TransformationBase.h
html/: _add_image_to_session_8h_source.html  _add_transformation_to_image_in_session_command_8h_source.html  _application_controller_8h_source.html  _apply_grayscale_8h_source.html  _apply_monochrome_8h_source.html  _apply_negative_8h_source.html  _apply_rotation_8h_source.html  _make_collage_command_8h_source.html  _raster_image_8h_source.html  _raster_image_base_8h_source.html  _raster_image_r_w_8h_source.html  _session_8h_source.html  _session_command_base_8h_source.html  _transformation_base_8h_source.html  annotated.html  class_add_image_to_session-members.html  class_add_image_to_session.html  class_add_transformation_to_image_in_session_command-members.html  class_add_transformation_to_image_in_session_command.html  class_application_controller-members.html  class_application_controller.html  class_apply_grayscale-members.html  class_apply_grayscale.html  class_apply_negative.html  (+26 more)
(+69 files in other folders)
